# tms-project

./: .env.example  .gitignore  CHECKLIST.md  README.md  docker-compose.yml
public/app/: .env.example  Dockerfile  init.sh  pyproject.toml
public/app/app/: celery.py  settings.py  urls.py  views.py
public/app/blog/: admin.py  models.py  views.py
public/app/blog/fixtures/: category.json  page.json  post.json
public/app/blog/migrations/: 0001_initial.py  0002_category_published_at.py  0002_post_category_alter_post_allow_comment.py  0003_alter_category_slug_alter_post_slug.py  0003_alter_post_category.py  0004_alter_post_options_post_created_at_post_updated_at.py  0005_post_published_at.py
public/app/comment/: admin.py  forms.py  models.py  services.py  views.py
public/app/comment/api/: serializers.py  urls.py  views.py
public/app/comment/migrations/: 0001_initial.py  0002_alter_comment_options_comment_created_at_and_more.py
public/app/comment/templatetags/: show_comments.py
public/app/examination/: admin.py  models.py  services.py  tasks.py  views.py
public/app/examination/migrations/: 0001_initial.py  0002_alter_test_user.py  0003_result_status_alter_answer_content_and_more.py  0004_result_created_at_result_updated_at.py
public/app/tag/: admin.py  models.py  views.py
public/app/tag/migrations/: 0001_initial.py
public/app/templates/: welcome.html
public/app/templates/blog/: category.html  index.html  page.html  post.html
public/app/templates/comment/: card.html  (+3 more)
public/app/user/: forms.py  models.py  views.py
public/app/utilities/: models.py
(+44 files in other folders)
