[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["George Bukhtatyi <gbukhtatyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
crispy-bootstrap5 = "^2024.2"
django-debug-toolbar = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
