[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["George Bukhtatyi <gbukhtatyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
crispy-bootstrap5 = "^2024.2"
django-debug-toolbar = "^4.3.0"
python-dotenv = "^1.0.1"
django-rest-framework = "^0.1.0"
djangorestframework-simplejwt = "^5.3.1"
djoser = "^2.2.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
